<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kendokas"
    tools:context="com.galacticcoders.scorekeeper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="24dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/aka"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/aka_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-light"
                android:text="0"
                android:textColor="@color/colorPrimary"
                android:textSize="56sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:onClick="addOneForAka"
                android:text="@string/menAri" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:onClick="addOneForAka"
                android:text="@string/koteAri" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:onClick="addOneForAka"
                android:text="@string/doAri" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:onClick="addOneForAka"
                android:text="@string/tsukiAri" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:onClick="addHalfForShiro"
                android:text="@string/hansoku" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="24dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/shiro"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/shiro_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-light"
                android:text="0"
                android:textColor="#000000"
                android:textSize="56sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:onClick="addOneForShiro"
                android:text="@string/menAri" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:onClick="addOneForShiro"
                android:text="@string/koteAri" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:onClick="addOneForShiro"
                android:text="@string/doAri" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:onClick="addOneForShiro"
                android:text="@string/tsukiAri" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:onClick="addHalfForAka"
                android:text="@string/hansoku" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:onClick="resetScore"
        android:text="@string/reset" />

</RelativeLayout>